# augmented-reality-modeled-object-visualizer

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run.sh
include/: Decimation.hpp  Delaunay.hpp  Delaunay2.hpp  Delaunay2D.hpp  Delaunay3D.hpp  DelaunayTet.hpp  FlattenedPoint.hpp  KMeansReduction.hpp  Load3DModel.hpp  LoadCamera.hpp  ObjectProjection.hpp  PatternsGenerator.hpp
include/implement/: KMeansReduction.cpp  Load3DModel.cpp  LoadCamera.cpp  ObjectProjection.cpp
include/interface/: KMeansReduction.hpp  Load3DModel.hpp  LoadCamera.hpp  ObjectProjection.hpp  PatternsGenerator.hpp
mesh/: CMakeLists.txt
mesh/include/: Load3DModel.hpp  ObjectProjection.hpp
mesh/src/: main.cpp
resources/patterns/: PatternsGenerator.hpp
src/: generate.cpp  ma.py  main.cpp  mesh.cpp  mesh2.cpp  proof.cpp
test/: CMakeLists.txt  create_patterns.py  mesh1.cpp  mesh2.cpp  objloader.py  ply2obj.cpp  test0.py  test1.py  test2.py  testcpp.cpp
test/include/: DelaunayTet.hpp
